Feature/post directors (#2)
director post api method
