# app/Http/Requests/Api/Director/DirectorRequest.php
@@ -1,35 +1,0 @@
-<?php
-
-namespace App\Http\Requests\Api\Director;
-
-use Illuminate\Foundation\Http\FormRequest;
-
-/**
- * Class DirectorRequest
- */
-class DirectorRequest extends FormRequest
-{
-    /**
-     * Determine if the user is authorized to make this request.
-     *
-     * @return bool
-     */
-    public function authorize()
-    {
-        return true;
-    }
-
-    /**
-     * Get the validation rules that apply to the request.
-     *
-     * @return array
-     */
-    public function rules()
-    {
-        return [
-            'firstname' => ['required', 'string'],
-            'lastname' => ['required', 'email'],
-            'birthday_date' => ['nullable', 'string'],
-        ];
-    }
-}
